--- a/res/layout/weather_layout.xml
+++ b/res/layout/weather_layout.xml
@@ -8,6 +8,13 @@
         android:layout_height="50dp"
         android:background="#484e61" >
 
+        <Button 
+            android:id="@+id/switch_city"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:text="返回"
+            android:background="#d6f4d4"/>
         <TextView
             android:id="@+id/city_name"
             android:layout_width="wrap_content"
@@ -15,6 +22,14 @@
             android:layout_centerInParent="true"
             android:textColor="#fff"
             android:textSize="24sp" />
+         <Button 
+            android:id="@+id/refresh_weather"
+            android:layout_width="70dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:text="刷新"
+            android:background="#d4f4d6"/>
     </RelativeLayout>
 
     <RelativeLayout
